[DJ-01] Added Sass to Project
Added Sass to the Project

--- a/test_project/blog/templates/blog/home.html
+++ b/test_project/blog/templates/blog/home.html
@@ -1,8 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-</head>
-<body>
-    <h1>Home</h1>
-</body>
-</html>
+{% extends "blog/base.html" %}
+{% block content %}
+    <div class="container-fluid">
+        <h1>This is a test site</h1>
+        <p>
+            This is a test description
+        </p>
+    </div>
+{% endblock content %}
