--- a/test_project/blog/templates/blog/home.html
+++ b/test_project/blog/templates/blog/home.html
@@ -1,9 +1,15 @@
 {% extends "blog/base.html" %}
 {% block content %}
-    <div class="container-fluid">
-        <h1>This is a test site</h1>
-        <p>
-            This is a test description
-        </p>
-    </div>
+	{% for post in posts %}
+		<article class="media content-section">
+			<div class="media-body">
+				<div class="article-metadata">
+					<a class="mr-2" href="#">{{ post.author }}</a>
+					<small class="text-muted">{{ post.date_posted }}</small>
+				</div>
+				<h2><a class="article-title" href="#">{{ post.title }}</a></h2>
+				<p class="article-content">{{ post.content }}</p>
+			</div>
+		</article>
+	{% endfor %}
 {% endblock content %}
