--- a/test_project/blog/templates/blog/base.html
+++ b/test_project/blog/templates/blog/base.html
@@ -30,8 +30,12 @@
             </div>
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
-              <a class="nav-item nav-link" href="#">Login</a>
-              <a class="nav-item nav-link" href="#">Register</a>
+              {% if user.is_authenticated %}
+                <a class="nav-item nav-link" href="{% url 'Logout' %}">Logout</a>
+              {% else %}
+                <a class="nav-item nav-link" href="{% url 'Login' %}">Login</a>
+                <a class="nav-item nav-link" href="{% url 'User-Registration' %}">Register</a>
+              {% endif %}
             </div>
           </div>
         </div>
