--- a/test_project/blog/templates/blog/base.html
+++ b/test_project/blog/templates/blog/base.html
@@ -31,7 +31,9 @@
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
               {% if user.is_authenticated %}
-                <a class="nav-item nav-link" href="{% url 'Logout' %}">Logout</a>
+                <a class="nav-item nav-link" href="{% url 'Post-Create' %}">New Post</a>
+                <a class="nav-item nav-link" href="{% url 'Profile' %}">Profile</a>
+                <a class="nav-item nav-link" href="{% url 'Logout' %}">Logout</a> 
               {% else %}
                 <a class="nav-item nav-link" href="{% url 'Login' %}">Login</a>
                 <a class="nav-item nav-link" href="{% url 'User-Registration' %}">Register</a>
